--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ioredis": "^5.4.1",
     "puppeteer": "^23.9.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "uuid": "^11.0.3"
   }
 }
