--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx ts-node -r tsconfig-paths/register src/server.ts",
+    "setup": "node setup.js",
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts",
     "prepare": "husky"
   },
